// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateFretboard generates a fretBoard 1`] = `
Array [
  Object {
    "fretIndex": 0,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 4,
      "coord": Array [
        4,
        2,
      ],
      "empty": false,
      "freq": 329.6275569128699,
      "height": 64,
      "letter": "E",
      "midi": 64,
      "name": "E4",
      "oct": 4,
      "pc": "E",
      "step": 2,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 1,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 5,
      "coord": Array [
        -1,
        5,
      ],
      "empty": false,
      "freq": 349.2282314330039,
      "height": 65,
      "letter": "F",
      "midi": 65,
      "name": "F4",
      "oct": 4,
      "pc": "F",
      "step": 3,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 2,
    "note": Object {
      "acc": "b",
      "alt": -1,
      "chroma": 6,
      "coord": Array [
        -6,
        8,
      ],
      "empty": false,
      "freq": 369.99442271163446,
      "height": 66,
      "letter": "G",
      "midi": 66,
      "name": "Gb4",
      "oct": 4,
      "pc": "Gb",
      "step": 4,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 3,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 7,
      "coord": Array [
        1,
        4,
      ],
      "empty": false,
      "freq": 391.99543598174927,
      "height": 67,
      "letter": "G",
      "midi": 67,
      "name": "G4",
      "oct": 4,
      "pc": "G",
      "step": 4,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 4,
    "note": Object {
      "acc": "b",
      "alt": -1,
      "chroma": 8,
      "coord": Array [
        -4,
        7,
      ],
      "empty": false,
      "freq": 415.3046975799451,
      "height": 68,
      "letter": "A",
      "midi": 68,
      "name": "Ab4",
      "oct": 4,
      "pc": "Ab",
      "step": 5,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 5,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 9,
      "coord": Array [
        3,
        3,
      ],
      "empty": false,
      "freq": 440,
      "height": 69,
      "letter": "A",
      "midi": 69,
      "name": "A4",
      "oct": 4,
      "pc": "A",
      "step": 5,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 6,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 10,
      "coord": Array [
        10,
        -1,
      ],
      "empty": false,
      "freq": 466.1637615180899,
      "height": 70,
      "letter": "A",
      "midi": 70,
      "name": "A#4",
      "oct": 4,
      "pc": "A#",
      "step": 5,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 7,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 11,
      "coord": Array [
        5,
        2,
      ],
      "empty": false,
      "freq": 493.8833012561241,
      "height": 71,
      "letter": "B",
      "midi": 71,
      "name": "B4",
      "oct": 4,
      "pc": "B",
      "step": 6,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 8,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 0,
      "coord": Array [
        0,
        5,
      ],
      "empty": false,
      "freq": 523.2511306011972,
      "height": 72,
      "letter": "C",
      "midi": 72,
      "name": "C5",
      "oct": 5,
      "pc": "C",
      "step": 0,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 9,
    "note": Object {
      "acc": "b",
      "alt": -1,
      "chroma": 1,
      "coord": Array [
        -5,
        8,
      ],
      "empty": false,
      "freq": 554.3652619537442,
      "height": 73,
      "letter": "D",
      "midi": 73,
      "name": "Db5",
      "oct": 5,
      "pc": "Db",
      "step": 1,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 10,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 2,
      "coord": Array [
        2,
        4,
      ],
      "empty": false,
      "freq": 587.3295358348151,
      "height": 74,
      "letter": "D",
      "midi": 74,
      "name": "D5",
      "oct": 5,
      "pc": "D",
      "step": 1,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 11,
    "note": Object {
      "acc": "b",
      "alt": -1,
      "chroma": 3,
      "coord": Array [
        -3,
        7,
      ],
      "empty": false,
      "freq": 622.2539674441618,
      "height": 75,
      "letter": "E",
      "midi": 75,
      "name": "Eb5",
      "oct": 5,
      "pc": "Eb",
      "step": 2,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 12,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 4,
      "coord": Array [
        4,
        3,
      ],
      "empty": false,
      "freq": 659.2551138257398,
      "height": 76,
      "letter": "E",
      "midi": 76,
      "name": "E5",
      "oct": 5,
      "pc": "E",
      "step": 2,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 13,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 9,
      "coord": Array [
        3,
        2,
      ],
      "empty": false,
      "freq": 220,
      "height": 57,
      "letter": "A",
      "midi": 57,
      "name": "A3",
      "oct": 3,
      "pc": "A",
      "step": 5,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 14,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 10,
      "coord": Array [
        10,
        -2,
      ],
      "empty": false,
      "freq": 233.08188075904496,
      "height": 58,
      "letter": "A",
      "midi": 58,
      "name": "A#3",
      "oct": 3,
      "pc": "A#",
      "step": 5,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 15,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 11,
      "coord": Array [
        5,
        1,
      ],
      "empty": false,
      "freq": 246.94165062806206,
      "height": 59,
      "letter": "B",
      "midi": 59,
      "name": "B3",
      "oct": 3,
      "pc": "B",
      "step": 6,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 16,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 0,
      "coord": Array [
        0,
        4,
      ],
      "empty": false,
      "freq": 261.6255653005986,
      "height": 60,
      "letter": "C",
      "midi": 60,
      "name": "C4",
      "oct": 4,
      "pc": "C",
      "step": 0,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 17,
    "note": Object {
      "acc": "b",
      "alt": -1,
      "chroma": 1,
      "coord": Array [
        -5,
        7,
      ],
      "empty": false,
      "freq": 277.1826309768721,
      "height": 61,
      "letter": "D",
      "midi": 61,
      "name": "Db4",
      "oct": 4,
      "pc": "Db",
      "step": 1,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 18,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 2,
      "coord": Array [
        2,
        3,
      ],
      "empty": false,
      "freq": 293.6647679174076,
      "height": 62,
      "letter": "D",
      "midi": 62,
      "name": "D4",
      "oct": 4,
      "pc": "D",
      "step": 1,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 19,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 3,
      "coord": Array [
        9,
        -1,
      ],
      "empty": false,
      "freq": 311.12698372208087,
      "height": 63,
      "letter": "D",
      "midi": 63,
      "name": "D#4",
      "oct": 4,
      "pc": "D#",
      "step": 1,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 20,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 4,
      "coord": Array [
        4,
        2,
      ],
      "empty": false,
      "freq": 329.6275569128699,
      "height": 64,
      "letter": "E",
      "midi": 64,
      "name": "E4",
      "oct": 4,
      "pc": "E",
      "step": 2,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 21,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 5,
      "coord": Array [
        -1,
        5,
      ],
      "empty": false,
      "freq": 349.2282314330039,
      "height": 65,
      "letter": "F",
      "midi": 65,
      "name": "F4",
      "oct": 4,
      "pc": "F",
      "step": 3,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 22,
    "note": Object {
      "acc": "b",
      "alt": -1,
      "chroma": 6,
      "coord": Array [
        -6,
        8,
      ],
      "empty": false,
      "freq": 369.99442271163446,
      "height": 66,
      "letter": "G",
      "midi": 66,
      "name": "Gb4",
      "oct": 4,
      "pc": "Gb",
      "step": 4,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 23,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 7,
      "coord": Array [
        1,
        4,
      ],
      "empty": false,
      "freq": 391.99543598174927,
      "height": 67,
      "letter": "G",
      "midi": 67,
      "name": "G4",
      "oct": 4,
      "pc": "G",
      "step": 4,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 24,
    "note": Object {
      "acc": "b",
      "alt": -1,
      "chroma": 8,
      "coord": Array [
        -4,
        7,
      ],
      "empty": false,
      "freq": 415.3046975799451,
      "height": 68,
      "letter": "A",
      "midi": 68,
      "name": "Ab4",
      "oct": 4,
      "pc": "Ab",
      "step": 5,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 25,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 9,
      "coord": Array [
        3,
        3,
      ],
      "empty": false,
      "freq": 440,
      "height": 69,
      "letter": "A",
      "midi": 69,
      "name": "A4",
      "oct": 4,
      "pc": "A",
      "step": 5,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 26,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 2,
      "coord": Array [
        2,
        2,
      ],
      "empty": false,
      "freq": 146.8323839587038,
      "height": 50,
      "letter": "D",
      "midi": 50,
      "name": "D3",
      "oct": 3,
      "pc": "D",
      "step": 1,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 27,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 3,
      "coord": Array [
        9,
        -2,
      ],
      "empty": false,
      "freq": 155.56349186104043,
      "height": 51,
      "letter": "D",
      "midi": 51,
      "name": "D#3",
      "oct": 3,
      "pc": "D#",
      "step": 1,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 28,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 4,
      "coord": Array [
        4,
        1,
      ],
      "empty": false,
      "freq": 164.81377845643496,
      "height": 52,
      "letter": "E",
      "midi": 52,
      "name": "E3",
      "oct": 3,
      "pc": "E",
      "step": 2,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 29,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 5,
      "coord": Array [
        -1,
        4,
      ],
      "empty": false,
      "freq": 174.61411571650194,
      "height": 53,
      "letter": "F",
      "midi": 53,
      "name": "F3",
      "oct": 3,
      "pc": "F",
      "step": 3,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 30,
    "note": Object {
      "acc": "b",
      "alt": -1,
      "chroma": 6,
      "coord": Array [
        -6,
        7,
      ],
      "empty": false,
      "freq": 184.99721135581723,
      "height": 54,
      "letter": "G",
      "midi": 54,
      "name": "Gb3",
      "oct": 3,
      "pc": "Gb",
      "step": 4,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 31,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 7,
      "coord": Array [
        1,
        3,
      ],
      "empty": false,
      "freq": 195.99771799087463,
      "height": 55,
      "letter": "G",
      "midi": 55,
      "name": "G3",
      "oct": 3,
      "pc": "G",
      "step": 4,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 32,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 8,
      "coord": Array [
        8,
        -1,
      ],
      "empty": false,
      "freq": 207.65234878997256,
      "height": 56,
      "letter": "G",
      "midi": 56,
      "name": "G#3",
      "oct": 3,
      "pc": "G#",
      "step": 4,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 33,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 9,
      "coord": Array [
        3,
        2,
      ],
      "empty": false,
      "freq": 220,
      "height": 57,
      "letter": "A",
      "midi": 57,
      "name": "A3",
      "oct": 3,
      "pc": "A",
      "step": 5,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 34,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 10,
      "coord": Array [
        10,
        -2,
      ],
      "empty": false,
      "freq": 233.08188075904496,
      "height": 58,
      "letter": "A",
      "midi": 58,
      "name": "A#3",
      "oct": 3,
      "pc": "A#",
      "step": 5,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 35,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 11,
      "coord": Array [
        5,
        1,
      ],
      "empty": false,
      "freq": 246.94165062806206,
      "height": 59,
      "letter": "B",
      "midi": 59,
      "name": "B3",
      "oct": 3,
      "pc": "B",
      "step": 6,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 36,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 0,
      "coord": Array [
        0,
        4,
      ],
      "empty": false,
      "freq": 261.6255653005986,
      "height": 60,
      "letter": "C",
      "midi": 60,
      "name": "C4",
      "oct": 4,
      "pc": "C",
      "step": 0,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 37,
    "note": Object {
      "acc": "b",
      "alt": -1,
      "chroma": 1,
      "coord": Array [
        -5,
        7,
      ],
      "empty": false,
      "freq": 277.1826309768721,
      "height": 61,
      "letter": "D",
      "midi": 61,
      "name": "Db4",
      "oct": 4,
      "pc": "Db",
      "step": 1,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 38,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 2,
      "coord": Array [
        2,
        3,
      ],
      "empty": false,
      "freq": 293.6647679174076,
      "height": 62,
      "letter": "D",
      "midi": 62,
      "name": "D4",
      "oct": 4,
      "pc": "D",
      "step": 1,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 39,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 7,
      "coord": Array [
        1,
        2,
      ],
      "empty": false,
      "freq": 97.99885899543733,
      "height": 43,
      "letter": "G",
      "midi": 43,
      "name": "G2",
      "oct": 2,
      "pc": "G",
      "step": 4,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 40,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 8,
      "coord": Array [
        8,
        -2,
      ],
      "empty": false,
      "freq": 103.82617439498628,
      "height": 44,
      "letter": "G",
      "midi": 44,
      "name": "G#2",
      "oct": 2,
      "pc": "G#",
      "step": 4,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 41,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 9,
      "coord": Array [
        3,
        1,
      ],
      "empty": false,
      "freq": 110,
      "height": 45,
      "letter": "A",
      "midi": 45,
      "name": "A2",
      "oct": 2,
      "pc": "A",
      "step": 5,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 42,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 10,
      "coord": Array [
        10,
        -3,
      ],
      "empty": false,
      "freq": 116.54094037952248,
      "height": 46,
      "letter": "A",
      "midi": 46,
      "name": "A#2",
      "oct": 2,
      "pc": "A#",
      "step": 5,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 43,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 11,
      "coord": Array [
        5,
        0,
      ],
      "empty": false,
      "freq": 123.47082531403103,
      "height": 47,
      "letter": "B",
      "midi": 47,
      "name": "B2",
      "oct": 2,
      "pc": "B",
      "step": 6,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 44,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 0,
      "coord": Array [
        0,
        3,
      ],
      "empty": false,
      "freq": 130.8127826502993,
      "height": 48,
      "letter": "C",
      "midi": 48,
      "name": "C3",
      "oct": 3,
      "pc": "C",
      "step": 0,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 45,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 1,
      "coord": Array [
        7,
        -1,
      ],
      "empty": false,
      "freq": 138.59131548843604,
      "height": 49,
      "letter": "C",
      "midi": 49,
      "name": "C#3",
      "oct": 3,
      "pc": "C#",
      "step": 0,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 46,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 2,
      "coord": Array [
        2,
        2,
      ],
      "empty": false,
      "freq": 146.8323839587038,
      "height": 50,
      "letter": "D",
      "midi": 50,
      "name": "D3",
      "oct": 3,
      "pc": "D",
      "step": 1,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 47,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 3,
      "coord": Array [
        9,
        -2,
      ],
      "empty": false,
      "freq": 155.56349186104043,
      "height": 51,
      "letter": "D",
      "midi": 51,
      "name": "D#3",
      "oct": 3,
      "pc": "D#",
      "step": 1,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 48,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 4,
      "coord": Array [
        4,
        1,
      ],
      "empty": false,
      "freq": 164.81377845643496,
      "height": 52,
      "letter": "E",
      "midi": 52,
      "name": "E3",
      "oct": 3,
      "pc": "E",
      "step": 2,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 49,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 5,
      "coord": Array [
        -1,
        4,
      ],
      "empty": false,
      "freq": 174.61411571650194,
      "height": 53,
      "letter": "F",
      "midi": 53,
      "name": "F3",
      "oct": 3,
      "pc": "F",
      "step": 3,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 50,
    "note": Object {
      "acc": "b",
      "alt": -1,
      "chroma": 6,
      "coord": Array [
        -6,
        7,
      ],
      "empty": false,
      "freq": 184.99721135581723,
      "height": 54,
      "letter": "G",
      "midi": 54,
      "name": "Gb3",
      "oct": 3,
      "pc": "Gb",
      "step": 4,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 51,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 7,
      "coord": Array [
        1,
        3,
      ],
      "empty": false,
      "freq": 195.99771799087463,
      "height": 55,
      "letter": "G",
      "midi": 55,
      "name": "G3",
      "oct": 3,
      "pc": "G",
      "step": 4,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 52,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 0,
      "coord": Array [
        0,
        2,
      ],
      "empty": false,
      "freq": 65.40639132514966,
      "height": 36,
      "letter": "C",
      "midi": 36,
      "name": "C2",
      "oct": 2,
      "pc": "C",
      "step": 0,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 53,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 1,
      "coord": Array [
        7,
        -2,
      ],
      "empty": false,
      "freq": 69.29565774421803,
      "height": 37,
      "letter": "C",
      "midi": 37,
      "name": "C#2",
      "oct": 2,
      "pc": "C#",
      "step": 0,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 54,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 2,
      "coord": Array [
        2,
        1,
      ],
      "empty": false,
      "freq": 73.41619197935188,
      "height": 38,
      "letter": "D",
      "midi": 38,
      "name": "D2",
      "oct": 2,
      "pc": "D",
      "step": 1,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 55,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 3,
      "coord": Array [
        9,
        -3,
      ],
      "empty": false,
      "freq": 77.78174593052022,
      "height": 39,
      "letter": "D",
      "midi": 39,
      "name": "D#2",
      "oct": 2,
      "pc": "D#",
      "step": 1,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 56,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 4,
      "coord": Array [
        4,
        0,
      ],
      "empty": false,
      "freq": 82.40688922821748,
      "height": 40,
      "letter": "E",
      "midi": 40,
      "name": "E2",
      "oct": 2,
      "pc": "E",
      "step": 2,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 57,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 5,
      "coord": Array [
        -1,
        3,
      ],
      "empty": false,
      "freq": 87.30705785825097,
      "height": 41,
      "letter": "F",
      "midi": 41,
      "name": "F2",
      "oct": 2,
      "pc": "F",
      "step": 3,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 58,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 6,
      "coord": Array [
        6,
        -1,
      ],
      "empty": false,
      "freq": 92.49860567790861,
      "height": 42,
      "letter": "F",
      "midi": 42,
      "name": "F#2",
      "oct": 2,
      "pc": "F#",
      "step": 3,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 59,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 7,
      "coord": Array [
        1,
        2,
      ],
      "empty": false,
      "freq": 97.99885899543733,
      "height": 43,
      "letter": "G",
      "midi": 43,
      "name": "G2",
      "oct": 2,
      "pc": "G",
      "step": 4,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 60,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 8,
      "coord": Array [
        8,
        -2,
      ],
      "empty": false,
      "freq": 103.82617439498628,
      "height": 44,
      "letter": "G",
      "midi": 44,
      "name": "G#2",
      "oct": 2,
      "pc": "G#",
      "step": 4,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 61,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 9,
      "coord": Array [
        3,
        1,
      ],
      "empty": false,
      "freq": 110,
      "height": 45,
      "letter": "A",
      "midi": 45,
      "name": "A2",
      "oct": 2,
      "pc": "A",
      "step": 5,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 62,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 10,
      "coord": Array [
        10,
        -3,
      ],
      "empty": false,
      "freq": 116.54094037952248,
      "height": 46,
      "letter": "A",
      "midi": 46,
      "name": "A#2",
      "oct": 2,
      "pc": "A#",
      "step": 5,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 63,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 11,
      "coord": Array [
        5,
        0,
      ],
      "empty": false,
      "freq": 123.47082531403103,
      "height": 47,
      "letter": "B",
      "midi": 47,
      "name": "B2",
      "oct": 2,
      "pc": "B",
      "step": 6,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 64,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 0,
      "coord": Array [
        0,
        3,
      ],
      "empty": false,
      "freq": 130.8127826502993,
      "height": 48,
      "letter": "C",
      "midi": 48,
      "name": "C3",
      "oct": 3,
      "pc": "C",
      "step": 0,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 65,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 5,
      "coord": Array [
        -1,
        2,
      ],
      "empty": false,
      "freq": 43.653528929125486,
      "height": 29,
      "letter": "F",
      "midi": 29,
      "name": "F1",
      "oct": 1,
      "pc": "F",
      "step": 3,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 66,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 6,
      "coord": Array [
        6,
        -2,
      ],
      "empty": false,
      "freq": 46.24930283895431,
      "height": 30,
      "letter": "F",
      "midi": 30,
      "name": "F#1",
      "oct": 1,
      "pc": "F#",
      "step": 3,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 67,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 7,
      "coord": Array [
        1,
        1,
      ],
      "empty": false,
      "freq": 48.999429497718666,
      "height": 31,
      "letter": "G",
      "midi": 31,
      "name": "G1",
      "oct": 1,
      "pc": "G",
      "step": 4,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 68,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 8,
      "coord": Array [
        8,
        -3,
      ],
      "empty": false,
      "freq": 51.91308719749314,
      "height": 32,
      "letter": "G",
      "midi": 32,
      "name": "G#1",
      "oct": 1,
      "pc": "G#",
      "step": 4,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 69,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 9,
      "coord": Array [
        3,
        0,
      ],
      "empty": false,
      "freq": 55,
      "height": 33,
      "letter": "A",
      "midi": 33,
      "name": "A1",
      "oct": 1,
      "pc": "A",
      "step": 5,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 70,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 10,
      "coord": Array [
        10,
        -4,
      ],
      "empty": false,
      "freq": 58.27047018976124,
      "height": 34,
      "letter": "A",
      "midi": 34,
      "name": "A#1",
      "oct": 1,
      "pc": "A#",
      "step": 5,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 71,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 11,
      "coord": Array [
        5,
        -1,
      ],
      "empty": false,
      "freq": 61.7354126570155,
      "height": 35,
      "letter": "B",
      "midi": 35,
      "name": "B1",
      "oct": 1,
      "pc": "B",
      "step": 6,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 72,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 0,
      "coord": Array [
        0,
        2,
      ],
      "empty": false,
      "freq": 65.40639132514966,
      "height": 36,
      "letter": "C",
      "midi": 36,
      "name": "C2",
      "oct": 2,
      "pc": "C",
      "step": 0,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 73,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 1,
      "coord": Array [
        7,
        -2,
      ],
      "empty": false,
      "freq": 69.29565774421803,
      "height": 37,
      "letter": "C",
      "midi": 37,
      "name": "C#2",
      "oct": 2,
      "pc": "C#",
      "step": 0,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 74,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 2,
      "coord": Array [
        2,
        1,
      ],
      "empty": false,
      "freq": 73.41619197935188,
      "height": 38,
      "letter": "D",
      "midi": 38,
      "name": "D2",
      "oct": 2,
      "pc": "D",
      "step": 1,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 75,
    "note": Object {
      "acc": "#",
      "alt": 1,
      "chroma": 3,
      "coord": Array [
        9,
        -3,
      ],
      "empty": false,
      "freq": 77.78174593052022,
      "height": 39,
      "letter": "D",
      "midi": 39,
      "name": "D#2",
      "oct": 2,
      "pc": "D#",
      "step": 1,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 76,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 4,
      "coord": Array [
        4,
        0,
      ],
      "empty": false,
      "freq": 82.40688922821748,
      "height": 40,
      "letter": "E",
      "midi": 40,
      "name": "E2",
      "oct": 2,
      "pc": "E",
      "step": 2,
    },
    "selectedChordInterval": "",
  },
  Object {
    "fretIndex": 77,
    "note": Object {
      "acc": "",
      "alt": 0,
      "chroma": 5,
      "coord": Array [
        -1,
        3,
      ],
      "empty": false,
      "freq": 87.30705785825097,
      "height": 41,
      "letter": "F",
      "midi": 41,
      "name": "F2",
      "oct": 2,
      "pc": "F",
      "step": 3,
    },
    "selectedChordInterval": "",
  },
]
`;

exports[`generateString generates A3 string 1`] = `
Array [
  "A3",
  "A#3",
  "B3",
  "C4",
  "Db4",
  "D4",
  "D#4",
  "E4",
  "F4",
  "Gb4",
  "G4",
  "Ab4",
  "A4",
]
`;

exports[`generateString generates E4 string 1`] = `
Array [
  "E4",
  "F4",
  "Gb4",
  "G4",
  "Ab4",
  "A4",
  "A#4",
  "B4",
  "C5",
  "Db5",
  "D5",
  "Eb5",
  "E5",
]
`;

exports[`generateString generates a 10 P5 StringsFlatNote 1`] = `
Array [
  "G#6",
  "C#6",
  "F#5",
  "B4",
  "E4",
  "A3",
  "D3",
  "G2",
  "C2",
  "F1",
]
`;

exports[`generateString generates a P5 StringsFlatNote 1`] = `
Array [
  "E4",
  "A3",
  "D3",
  "G2",
  "C2",
  "F1",
]
`;
